# openwiki

./: .env.example  .gitignore  CLAUDE.md  LLM Knowledge Bases  Thread by @karpathy.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  init_db.py  main.py
backend/app/api/: ask.py  export.py  ingest.py
backend/app/engine/: compile.py  ingestion.py  orchestrator.py  query.py  storage.py
backend/app/models/: __init__.py  association.py  concept.py  material.py  wiki_entry.py
backend/tests/: conftest.py  test_ask.py  test_compile.py  test_ingest.py  test_ingest_api.py  test_models.py  test_orchestrator.py  test_query.py  test_storage.py
docs/plans/: 2026-04-03-openwiki-design.md  2026-04-03-openwiki-mvp-implementation.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/inbox/: page.tsx
frontend/src/app/wiki/: page.tsx
frontend/src/components/: nav.tsx
frontend/src/lib/: api.ts
